Additional documentation tweaks and resource adjustments